<resources>
    <string name="app_name">App Review Helper</string>
    <string name="action_settings">Settings</string>
    <string name="appUnused">App not used today</string>
    <string name="appUsed">App used today</string>
    <string name="day">Day %1$d</string>
    <string name="action_increment_day">Next Day</string>
    <string name="action_spoof_review_first">Spoof First Review</string>
    <string name="title_activity_review_first">First Review</string>
    <string name="title_activity_review_second">Second Review</string>
    <string name="review_description_pre"> Rate your levels before using the app</string>
    <string name="review_description_post"> Rate your levels after using the app</string>
    <string name="label_anxiety">Anxiety level</string>
    <string name="label_happiness">Happiness level</string>
    <string name="review_submit_launch">Launch App →</string>
    <string name="submit">Submit</string>
    <string name="statusDone">App review completed today</string>
    <string name="action_spoof_review_second">Spoof second review</string>
    <string name="start_review_button_enabled_text">Start</string>
    <string name="start_review_button_disabled_text">Finished</string>
    <string name="action_export_csv">Export as CSV</string>
    <string name="first_review_icon_description">First Review Icon</string>
    <string name="second_review_icon_description">Second review icon status</string>
    <string name="app_used_icon_description">App used today status</string>
    <string name="progress_bar_description">Today\'s progress</string>
    <string name="copy_data">Copy Data</string>
    <string name="action_send_push_notification">Send push notification</string>
    <string name="name">Name</string>
    <string name="daily_reminder_time_text">Daily Reminder Time</string>
    <string name="time_hint">hh:mm</string>
    <string name="app_usage_length_text">App Usage Length</string>
    <string name="notification_snooze_time_text">Notification Snooze Length</string>
    <string name="automatic_recurring_notifications_text">Automatic Recurring Notifications</string>
    <string name="save_text">Save</string>
    <string name="default_subject_line" >My CSV data</string>
    <string name="default_email_recipient"></string>
    <string name="snooze">Snooze</string>
</resources>
