<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.appreview.MainActivity">


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_foreground"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <item
    android:id="@+id/action_increment_day"
    android:orderInCategory="100"
    android:title="@string/action_increment_day"
    app:showAsAction="never"/>

    <item
        android:id="@+id/action_spoof_review_first"
        android:orderInCategory="100"
        android:title="@string/action_spoof_review_first"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_spoof_review_second"
        android:orderInCategory="100"
        android:title="@string/action_spoof_review_second"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_export_csv"
        android:orderInCategory="100"
        android:title="@string/action_export_csv"
        app:showAsAction="ifRoom"/>
</menu>