<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ReviewActivity"
    tools:showIn="@layout/activity_review">

        <TextView
            android:id="@+id/review_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="166dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_hapiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_happiness"
            android:textAlignment="center"
            android:textSize="16sp" />

        <view
            android:id="@+id/happiness_slider"
            class="androidx.appcompat.widget.AppCompatRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/label_anxiety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_anxiety"
            android:textAlignment="center"
            android:textSize="16sp" />

        <view
            android:id="@+id/anxiety_slider"
            class="androidx.appcompat.widget.AppCompatRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <Button
        android:id="@+id/submit_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="onSubmitData"
        android:text="@string/review_submit_launch" />

    </LinearLayout>