<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputTooltip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:layout_weight="1"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <Switch
                    android:id="@+id/dailyReminderSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSwitchClick" />

                <TextView
                    android:id="@+id/SetDailyReminderText"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/daily_reminder_time_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dailReminderTooltip"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:hint="@string/time_hint">

                    <EditText
                        android:id="@+id/DailyReminderTimeInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/appUsageLengthSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSwitchClick"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/setReminderDelayText"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/app_usage_length_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usageLengthTooltip"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/time_hint">

                    <EditText
                        android:id="@+id/AppUsageLengthTimeInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="time" />

                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <Switch
                    android:id="@+id/notificationSnoozeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSwitchClick" />

                <TextView
                    android:id="@+id/notificationSnoozeLengthText"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/notification_snooze_time_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notificationSnoozeLengthTooltip"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/time_hint">

                    <EditText
                        android:id="@+id/NotificationSnoozeLengthTimeInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <Switch
                    android:id="@+id/AutomaticRecurrenceSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSwitchClick" />

                <TextView
                    android:id="@+id/AutomaticRecurrenceText"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/automatic_recurring_notifications_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="bottom|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_text" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>